@@ -10,6 +10,10 @@ What's New in Stackless 2.7.x?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issue/83
+  Fix demo/tracing.py: don't use flextype features. Unfortunately
+  it is no longer possible to change the __repr__ method of class tasklet.
+
 - https://bitbucket.org/stackless-dev/stackless/issue/85
   Fix a rare problem in the watchdog logic.
 
